@@ -1,5 +1,11 @@
 2007-04-19  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/Makefile.am: Added script_recorder.glade.
+	* plugins/script_recorder.glade: Added.
+	* plugins/script_recorder.py: Added script platform selection.
+	* src/lib/accerciser/script_playback.py: Fixed some issues with
+	application focusing.
+
 	* README:
 	* configure.in:
 	* debian/changelog: Bumped to version 0.1.2.
